style: fix inter-app konnector icon (was displayed behind the bar) :lipstick:

--- a/src/styles/services.styl
+++ b/src/styles/services.styl
@@ -86,3 +86,10 @@
         max-height      calc(100vh - (32/basefont)em)
         justify-content center
         padding         (16/basefont)em
+
+        .col-account-connection-icon
+            margin-top 3em
+
+    .coz-service-return + .coz-service-content
+        .col-account-connection-icon
+            margin-top 0
